fix daisyui layout problems

--- a/static/css/daisyui-docs.css
+++ b/static/css/daisyui-docs.css
@@ -9,18 +9,6 @@
     gap: 32px;
 }
 
-@media (min-width: 768px) {
-    .y-el-col-md {
-        flex: 1 0 0% !important;
-    }
-}
-
-@media (min-width: 992px) {
-    .y-el-col-lg {
-        flex: 1 0 0% !important;
-    }
-}  
-
 .markdown {
     max-width: unset !important;
 }
